Cambiando mi presentacion

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
             <section nombre="espacio" >
                 <div id="imagen">
-                    <p class="nombre">Hi, I'm Luifer and I'm a Junior Developer.
+                    <p class="nombre">Hi, I'm Luis Fernando but they call me Luifer and I'm a junior software developer.
                         </p>
                         <img class ="foto" src="../img/fotor-ai-2023102216318.jpg" alt="">
                         
